# Tryvora-Clothing-Web

cloth-backend/: .gitignore  ReadMe.md  clothing_annotator.html  create_admin.py  pyproject.toml  test_analyze.http  test_auth.http  walkthrough.md.resolved
cloth-backend/app/: main.py
cloth-backend/app/core/: security.py
cloth-backend/app/models/: __init__.py  admin.py  contact.py  user.py
cloth-backend/app/routers/: admin.py  analyze.py  auth.py  contact.py
cloth-backend/app/schemas/: admin.py  contact.py  user.py
cloth-backend/app/services/: api4ai_client.py  classifier_disabled.py  overlay.py  pose.py  size_recommender.py
cloth-backend/model/: __init__.py  evaluate_disabled.py  train_disabled.py  training_history.json
cloth-backend/static/: clothes_metadata.json
cloth-backend/static/clothing_pngs/: README.txt
cloth-backend/static/clothing_pngs/female/full_body/dress/: dress_0.json  dress_1.json  dress_3.json  dress_4.json
cloth-backend/static/clothing_pngs/female/lower_body/skirt/: skirt_0.json  skirt_1.json  skirt_2.json  skirt_3.json  skirt_4.json  skirt_5.json
cloth-backend/static/clothing_pngs/male/lower_body/pants/: pants_0.json  pants_1.json  pants_3.json  pants_4.json  pants_5.json
cloth-backend/static/clothing_pngs/male/upper_body/shirt/: shirt_0.json  shirt_1.json  shirt_2.json  shirt_3.json  shirt_4.json  shirt_5.json
cloth-backend/static/clothing_pngs/male/upper_body/tshirt/: tshirt_0.json  tshirt_1.json  tshirt_2.json  tshirt_3.json  tshirt_4.json  tshirt_5.json
cloth-frontend/: index.html  package-lock.json  package.json
(+34 files in other folders)
